Implement d3d lightiing with blue light.

--- a/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.ui
+++ b/d3d_practice_gui/d3d_practice_gui/d3d_practice_gui.ui
@@ -103,7 +103,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Camera Rotation</string>
+    <string>Camera Position</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
